Fix minor layout issues

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -18,6 +18,7 @@
   background-size: cover;
   background-position: left;
   background-image: url(https://i.imgur.com/TroN2YL.jpg);
+  min-height: calc(100vh - 56px);
 }
 
 .index-background-bars {
